--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@
 
 [data-testid="two-column-right"] .sl-bg-canvas-200 {
   background-color: #e0e6f0;
+  color: black;
 }
 
 [data-testid="two-column-right"] .sl-bg-canvas-100 {
   background-color: #ebeef5;
+  color: black;
 }
 
 [data-testid="two-column-right"] .function {
@@ -33,12 +35,29 @@
 /*}*/
 
 #testButton {
+  display: none;
   border: 5px solid red;
 }
 
-@media screen and (max-width: 1200px) {
-  .sl-flex.sl-overflow-y-auto.sl-flex-col.sl-sticky.sl-inset-y-0.sl-pt-8.sl-bg-canvas-100.sl-border-r {
+.sl-my-3 {
+  display: unset;
+}
+
+.unset-hidden {
+  display: unset !important;
+}
+
+.sl-inverted {
+  color: black !important;
+}
+
+@media screen and (max-width: 800px) {
+  .sl-my-3 {
     display: none;
+    position: absolute;
+    z-index: 5000;
+    background: grey;
+    border: 5px solid red;
   }
   .sl-stack.sl-stack--vertical.sl-stack--8.HttpOperation.sl-flex.sl-flex-col.sl-items-stretch.sl-w-full > .sl-flex:nth-child(2) {
     flex-direction: column;
@@ -46,13 +65,23 @@
 
   [data-testid="two-column-left"] {
     width: auto;
-    max-width: 600px;
+    max-width: unset;
   }
 
   [data-testid="two-column-right"].sl-ml-16 {
+    margin-top: 30px;
     margin-left: 0;
     width: auto;
-    max-width: 600px;
+    max-width: unset;
+  }
+
+  .sl-px-24 {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  #testButton {
+    display: unset;
   }
 
 }
