--- a/style.css
+++ b/style.css
@@ -54,10 +54,12 @@
 @media screen and (max-width: 800px) {
   .sl-my-3 {
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 5000;
     background: grey;
     border: 5px solid red;
+    width: 100%;
+    height: 100%;
   }
   .sl-stack.sl-stack--vertical.sl-stack--8.HttpOperation.sl-flex.sl-flex-col.sl-items-stretch.sl-w-full > .sl-flex:nth-child(2) {
     flex-direction: column;
@@ -72,7 +74,7 @@
     margin-top: 30px;
     margin-left: 0;
     width: auto;
-    max-width: unset;
+    max-width: unset !important;
   }
 
   .sl-px-24 {
